<resources>
    <string name="app_name">Vill8</string>

    <string name="login_as_village">Masuk sebagai Desa</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="register_as_village">Daftar sebagai Desa</string>
    <string name="nama_desa">Nama Desa</string>
    <string name="alamat_desa">Alamat Desa</string>
    <string name="provinsi">Provinsi</string>
    <string name="kota_kabupaten">Kota / Kabupaten</string>
    <string name="lengkap_profil_narahubung_desa">Lengkapi Profil Narahubung Desa</string>
    <string name="nama_narahubung">Nama Narahubung</string>
    <string name="nomor_hp_narahubung">Nomor Ponsel Narahubung</string>
    <string name="email_narahubung">Email Narahubung</string>
    <string name="register">Daftar Akun</string>
    <string name="already_have_account">Sudah punya Akun?</string>
    <string name="login_here">Masuk ke Akun</string>
    <string name="dont_have_account">Belum punya Akun?</string>
    <string name="register_here">Daftar Sekarang</string>
    <string name="title_profile">Profil</string>
    <string name="title_chat">Chat</string>
    <string name="title_home">Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>